Fix icon vertical alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -958,6 +958,7 @@ button.suki-toggle:hover, button.suki-toggle:focus {
 	height: 1em;
 	line-height: 1;
 	text-align: center;
+	vertical-align: middle;
 }
 
 .suki-icon svg {
