--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -240,6 +240,7 @@ button.suki-toggle {
 	height: 1em;
 	line-height: 1;
 	text-align: center;
+	vertical-align: middle;
 	
 	svg {
 		display: inline-block;
